--- a/ecommerse/templates/product/addProduct.html
+++ b/ecommerse/templates/product/addProduct.html
@@ -7,6 +7,6 @@
  enctype="multipart/form-data"
 >{% csrf_token %}
         {{ form.as_p }}
-<button type="submit" class="save btn btn-default">Save</button>
+<button type="submit" class="btn btn-primary">Save</button>
 </form>
 {% endblock content %}
