--- a/blogApp/templates/blogs/blogDetail.html
+++ b/blogApp/templates/blogs/blogDetail.html
@@ -5,6 +5,18 @@
     <div class='col'>
       <h1>{{ blog_detail.title }}</h1>
       <h2>{{ blog_detail.content }}</h2>
+      <p> {{ user.first_name }}</p>
+      {% if request.user.is_authenticated %}
+        {% if request.user.is_staff %}
+          <a href="{{ blog_detail.get_edit_url }}">
+            + Edit
+          </a>
+          <a href="{{ blog_detail.get_delete_url }}">
+            + Delete
+          </a>
+        {% endif %}
+      {% endif %}
+
     </div>
   </div>
 </div>
