--- a/blogApp/templates/blogs/blogList.html
+++ b/blogApp/templates/blogs/blogList.html
@@ -3,7 +3,15 @@
 <div class='container'>
   <div class='row mx-auto justify-content-center'>
     <div class='col'>
-      <h1>this is blod detail page</h1>
+      <h1>this is blod list page</h1>
+      {% for blog in blog_list %}
+      <h1>
+        {{ blog.title }}
+      </h1>
+      <h4>
+        {{ blog.content }}
+      </h4>
+      {% endfor %}
     </div>
   </div>
 </div>
