--- a/blogApp/templates/blogs/blogDetail.html
+++ b/blogApp/templates/blogs/blogDetail.html
@@ -4,8 +4,7 @@
   <div class='row mx-auto justify-content-center'>
     <div class='col'>
       <h1>{{ blog_detail.title }}</h1>
-      <h2>{{ blog_detail.content }}</h2>
-      <p> {{ user.first_name }}</p>
+      <p>{{ blog_detail.content | linebreaks }}</p>
       {% if request.user.is_authenticated %}
         {% if request.user.is_staff %}
           <a href="{{ blog_detail.get_edit_url }}">
