--- a/blogApp/templates/blogs/form.html
+++ b/blogApp/templates/blogs/form.html
@@ -6,7 +6,7 @@
       <h1> {{ title }} </h1>
       <form method='POST' action='.'>{% csrf_token %}
       {{ form.as_p }}
-      <button type='submit'> Send </button>
+      <button type='submit'>Submit</button>
       </form>
     </div>
   </div>
