--- a/blogApp/templates/home.html
+++ b/blogApp/templates/home.html
@@ -4,10 +4,11 @@
   <div class='row mx-auto justify-content-center'>
     <div class='col'>
       <h1>{{ title }}</h1>
-      {% for list in my_list  %}
-        <li>
-          {{ list }}
-        </li>
+      {% for blog in blogs  %}
+          {% comment %} <a href="blog-detail/{{blog.slug}}">{{ blog.slug }}</a> {% endcomment %}
+          {% comment %} <a href="{{ blog.get_absolute_url }}">{{ blog.title }}</a> {% endcomment %}
+
+          {% include 'blogs/set-inline.html' with blog_post=blog truncate=True %}
       {% endfor %}
       {% comment %} <h1>{{ request.user }}</h1>
       {{ request.path }}
