--- a/blogApp/templates/blogs/blogDetail.html
+++ b/blogApp/templates/blogs/blogDetail.html
@@ -1,22 +1,23 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class='container'>
-  <div class='row mx-auto justify-content-center'>
-    <div class='col'>
-      <h1>{{ blog_detail.title }}</h1>
-      <p>{{ blog_detail.content | linebreaks }}</p>
-      {% if request.user.is_authenticated %}
-        {% if request.user.is_staff %}
-          <a href="{{ blog_detail.get_edit_url }}">
-            + Edit
-          </a>
-          <a href="{{ blog_detail.get_delete_url }}">
-            + Delete
-          </a>
-        {% endif %}
+  <div class='row'>
+    <h1>Blog detail</h1>
+    {% include 'blogs/set-inline.html' with blog=blog_detail truncate=True detail=False %} {% comment %} passing truncate variable to pass in set-linline.html {% endcomment %}
+    {% comment %} <h1>{{ blog_detail.title }}</h1>
+    <p>{{ blog_detail.content | linebreaks }}</p> {% endcomment %}
+    {% if request.user.is_authenticated %}
+      {% if request.user.is_staff %}
+      <div class='col-12'>
+        <a href="{{ blog_detail.get_edit_url }}">
+          + Edit
+        </a>
+        <a href="{{ blog_detail.get_delete_url }}">
+          + Delete
+        </a>
+      </div>
       {% endif %}
-
-    </div>
+    {% endif %}
   </div>
 </div>
 {% endblock content %}
