--- a/blogApp/templates/blogs/blogList.html
+++ b/blogApp/templates/blogs/blogList.html
@@ -1,20 +1,18 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class='container-fluid'>
-  <div class='row mx-auto justify-content-center'>
-    <div class='row'>
-      <h1>All blog list</h1>
-      <div class="card-group">
-      {% for blog in blog_list %}
-      {% include 'blogs/set-inline.html' with blog_post=blog truncate=True %} {% comment %} passing truncate variable to pass in set-linline.html {% endcomment %}
-      {% comment %} <h1>
-        <a href="{{ blog.get_absolute_url }}">{{ blog.title }}</a>
-      </h1>
-      <h5>
-        {{ blog.content }}
-      </h5> {% endcomment %}
-      {% endfor %}
-      </div>
+<div class='container'>
+  <div class='row'>
+    <h1>All blog list</h1>
+    <div class="card-group">
+    {% for blog in blog_list %}
+    {% include 'blogs/set-inline.html' with blog_post=blog truncate=True detail=True %} {% comment %} passing truncate variable to pass in set-linline.html {% endcomment %}
+    {% comment %} <h1>
+      <a href="{{ blog.get_absolute_url }}">{{ blog.title }}</a>
+    </h1>
+    <h5>
+      {{ blog.content }}
+    </h5> {% endcomment %}
+    {% endfor %}
     </div>
   </div>
 </div>
