Full project setup

--- a/blogApp/templates/blogs/blogretrieved.html
+++ b/blogApp/templates/blogs/blogretrieved.html
@@ -3,12 +3,7 @@
 <div class='container'>
   <div class='row mx-auto justify-content-center'>
     <div class='col'>
-      <h1> {{ title }} </h1>
-      <form method='POST' action='.'>
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type='submit'> Send </button>
-      </form>
+      <h1>this is retrieved blog page</h1>
     </div>
   </div>
 </div>
