--- a/blogApp/templates/blogs/blogDetail.html
+++ b/blogApp/templates/blogs/blogDetail.html
@@ -3,7 +3,7 @@
 <div class='container'>
   <div class='row'>
     <h1>Blog detail</h1>
-    {% include 'blogs/set-inline.html' with blog=blog_detail truncate=True detail=False %} {% comment %} passing truncate variable to pass in set-linline.html {% endcomment %}
+    {% include 'blogs/set-inline.html' with blog=blog_detail truncate=False detail=False %} {% comment %} passing truncate variable to pass in set-linline.html {% endcomment %}
     {% comment %} <h1>{{ blog_detail.title }}</h1>
     <p>{{ blog_detail.content | linebreaks }}</p> {% endcomment %}
     {% if request.user.is_authenticated %}
