--- a/blogApp/templates/blogs/blogUpdate.html
+++ b/blogApp/templates/blogs/blogUpdate.html
@@ -3,10 +3,11 @@
 <div class='container'>
   <div class='row mx-auto justify-content-center'>
     <div class='col'>
-      <h1> {{ title }} </h1>
-      <form method='POST' action='.' enctype="multipart/form-data">{% csrf_token %}
-      {{ form.as_p }}
-      <button type='submit'>Submit</button>
+      <h1>{{ title }} - Update</h1>
+      <form method='POST' action='./edit'>
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type='submit'>Submit </button>
       </form>
     </div>
   </div>
