--- a/blogApp/templates/home.html
+++ b/blogApp/templates/home.html
@@ -8,7 +8,7 @@
           {% comment %} <a href="blog-detail/{{blog.slug}}">{{ blog.slug }}</a> {% endcomment %}
           {% comment %} <a href="{{ blog.get_absolute_url }}">{{ blog.title }}</a> {% endcomment %}
 
-          {% include 'blogs/set-inline.html' with blog_post=blog truncate=True %}
+          {% include 'blogs/set-inline.html' with blog_post=blog truncate=True detail=True %}
       {% endfor %}
       {% comment %} <h1>{{ request.user }}</h1>
       {{ request.path }}
