--- a/blogApp/templates/parts/footer.html
+++ b/blogApp/templates/parts/footer.html
@@ -1,4 +1,6 @@
-<div class="container-fluid border border-top border-dark">
+{% load static %}
+<link rel="stylesheet" href="{% static 'base.css' %}" >
+<div class="container-fluid footer border-top border-dark">
 <!-- Footer -->
 <footer class="page-footer font-small blue pt-4">
 
