--- a/blogApp/templates/base.html
+++ b/blogApp/templates/base.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html lang="en">
   {% include './parts/header.html' %}
-  <body style='margin: 0; width:100%; height:100%; padding: 0; background-size: 100%; min-height: 100%;'>
+  <body>
     {% include './parts/navbar.html' %}
 
+    <div class="inner-content">
     {% block content %}
     {% endblock content %}
-
+    </div>
     {% include './parts/footer.html' %}
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
